# cargo-seaorm-markdown

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: file.rs  main.rs  project.rs
src/erd/: mod.rs
tests/: normal.rs
tests/test-project/: .test.md  Cargo.toml
tests/test-project/src/entity/: cake.rs
