[package]
authors = ["오병진 <qudwls185@naver.com>"]
name = "cargo-seaorm-markdown"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
clap = { version="4", features=["derive"] }
proc-macro2 = "1.0.86"
syn = { version = "2.0.74", features = ["full", "extra-traits"] }
walkdir = "2.5.0"

[dev-dependencies]
assert_cli = "0.6"
